# bp

./: .gitignore  ;  Cargo.toml  LICENSE-GPLv2  README.md  flake.nix  index.html  test.ily
assets/: sw.js
doc/: chord_class.puml  component.puml  gui_class.puml  interpret_class.puml  key_class.puml  l_system_class.puml  l_system_partial_class.puml  lily_class.puml  notation_class.puml  note_class.puml  octave_relative_class.puml  rule_class.puml  rule_set_class.puml  stave_class.puml
src/: error.rs  ext.rs  gui.rs  lib.rs  lily.rs  ls.rs  lsystem.rs  main.rs  notation.rs  sanitizer.rs  utils.rs
src/gui/: gui_app.rs  utils.rs  widgets.rs  windows.rs
src/gui/utils/: texture.rs
src/gui/widgets/: acc_selector.rs  audio_player.rs  axiom_edit.rs  key_edit.rs  length_selector.rs  note_edit.rs  note_name_selector.rs  octave_selector.rs  rule_edit.rs  rule_sums.rs
src/gui/windows/: control_panel.rs  grammar_edit.rs  interpret_parameters.rs  logger.rs  score_visualizer.rs  statistics.rs
src/lily/: lily_note.rs  lily_stave.rs  lily_symbol.rs  lilypond.rs  score_parser.rs
src/ls/: l_rewriter.rs  l_rule.rs  l_rule_set.rs  l_system.rs
src/lsystem/: interpret.rs  l_rewriter.rs  l_rule.rs  l_rule_set.rs  l_system.rs
src/lsystem/interpret/: scale.rs
src/notation/: score.rs  stave.rs  symbol.rs  track.rs  visitor.rs
src/sanitizer/: lily_sanitizer.rs  score_sanitizer.rs  to_pref_synonym.rs
src/utils/: audio_controller.rs
tests/: l_rewriter.rs  l_rule_set.rs
