[package]
name = "music_sheet_gen"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Kloub <xkloub03@stud.fit.vut.cz>"]
include = ["eframe_template/LICENSE-APACHE", "eframe_template/LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive-getters = "0.5.0"
itertools = "0.14.0"
regex = "1.11.1"
thiserror = "2.0.11"
egui = "0.31"
egui_extras = "0.31.1"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
egui_logger = "0.6.3"
egui-notify = "0.19.0"
once_cell = "1.21.3"
egui_dock = { version = "0.16.0", features = ["serde"] }
image = "0.25.6"
fs = "0.0.5"
poll-promise = "0.3.0"
parking_lot = "0.12.3"

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
egui-file-dialog = "0.9.0"
tar = "0.4.44"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
rand = "0.9.0"
rodio = "0.20.1"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
